--- a/index.html
+++ b/index.html
@@ -1,12 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login</title>
+    <link rel="stylesheet" href="style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
-    <h1>Mi nombre es Wilmer Adelso sarpec sis</h1>
-    <h1>vienbenidos a mi pagina</h1>
+    <div class="wrapper">
+        <div class="Form-box Login">
+            <h2 >Login</h2>
+            <form acction="#"></form>
+            <div class="input-box"> 
+                <input type="text" required>
+                <label>Usuario</label> 
+                <i class='bx bxs-user' ></i>
+            </div>
+            <div div class="input-box">
+                <input type="text" required>
+                <label>Contraseña</label>
+                <i class='bx bxs-lock-open-alt'></i>
+            </div>
+            <button>
+                <div type="submit" class="btn" >Iniciar</div>
+            </button>
+            <div class="lagreg-link" >
+                <p>Crear Cuenta <a  href="#" 
+                    class="Crear-link">iniciar</a></p>
+            </div>
+        </div>
+    </div>
+
+
+    <script src="script.js"></script>
 </body>
+
 </html>
